# vaultwarden-bridge

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.bw-serve  README.md  cog.toml  docker-compose.test.yml  docker-compose.yml
.claude/: settings.local.json
.woodpecker/: bump.yml  commits.yml  release.yml  test.yml  vwb-release.yml
bridge/: Cargo.toml
bridge/migrations/: 20260320000001_create_machine_keys.down.sql  20260320000001_create_machine_keys.up.sql  20260320000002_create_access_policies.up.sql  20260320000004_create_cidr_rules.down.sql  20260321000001_add_key_prefix.down.sql  20260321000001_add_key_prefix.up.sql
bridge/src/: auth.rs  bw.rs  config.rs  error.rs  lib.rs  main.rs  middleware.rs  policy.rs  state.rs
bridge/src/api/: browse.rs  mod.rs  secrets.rs
bridge/src/db/: access_policies.rs  cidr_rules.rs  machine_keys.rs
bridge/src/ui/: audit_view.rs  auth.rs  cidrs.rs  dashboard.rs  keys.rs  mod.rs  policies.rs  vault_search.rs
bridge/templates/: base.html  cidrs.html  keys.html  login.html  policies.html
bridge/tests/: README.md  integration.rs
k8s/: bw-appdata-configmap.yaml  certificate.yaml  deployment.yaml  ingress.yaml  internal-ca-configmap.yaml  namespace.yaml  service.yaml  vaultwarden-secret.yaml.example
migrations/: 20260320000002_create_access_policies.down.sql  20260320000003_create_audit_log.down.sql  20260320000003_create_audit_log.up.sql  20260320000004_create_cidr_rules.up.sql
scripts/: register-vaultwarden.js  register-vaultwarden.py  run-integration-tests.sh  seed-vaultwarden.sh
src/: api.rs  audit.rs  auth.rs  bw.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  (+2 more)
test-setup/: Cargo.toml
test-setup/src/: main.rs
(+32 files in other folders)
