[package]
name = "vaultwarden-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
askama = "0.14"
askama_web = { version = "0.14", features = ["axum-0.8"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "normalize-path"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
rand = "0.9"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
glob-match = "0.2"
ipnet = "2"
thiserror = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2"
